--- a/src/style/profile.less
+++ b/src/style/profile.less
@@ -1,5 +1,6 @@
 .profilePage {
     text-align: center;
+    overflow-y: hidden;
     .boxMenu{
         background: white;
         border-radius: 28px;
